chore: add missing endpoint and fix acceptance tests
